--- a/.emacs.org
+++ b/.emacs.org
@@ -1,31 +1,33 @@
-﻿#+TITLE: LAEMACS (emacs configurations file)
+#+TITLE: LAEMACS (emacs configurations file)
 #+AUTHOR: Andre Rosendo
 #+EMAIL: andre.rosendo@hotmail.com
 
-* Package.el
-Added by Package.el.  This must come before configurations of
-installed packages.  Don't delete this line.  If you don't want it,
-just comment it out by adding a semicolon to the start of the line.
-You may delete these explanatory comments.
-#+BEGIN_SRC emacs-lisp
+
+* Package
+  Added by Package.el.  This must come before configurations of
+  installed packages.  Don't delete this line.  If you don't want it,
+  just comment it out by adding a semicolon to the start of the line.
+  You may delete these explanatory comments.
+  #+BEGIN_SRC emacs-lisp
 (require 'package)
-#+END_SRC
-* Package-archives
-Extra archives where emacs can search for extensions
-#+BEGIN_SRC emacs-lisp
+(package-initialize)
+  #+END_SRC
+
+
+* Package archives
+  Extra archives where emacs can search for extensions
+  #+BEGIN_SRC emacs-lisp
 (add-to-list 'package-archives '("melpa" . "https://melpa.org/packages/") t)
 (add-to-list 'package-archives '("org" . "https://orgmode.org/elpa/") t)
-#+END_SRC
-* Initialize package.el
-#+BEGIN_SRC emacs-lisp
-(package-initialize)
-#+END_SRC
+  #+END_SRC
+
+
 * Automatic Installation of Packages
 ** Check if packages are installed
    If packages aren't installed:
    - Refrash package repos (only does it once)
    - Install the package
-#+BEGIN_SRC emacs-lisp
+   #+BEGIN_SRC emacs-lisp
 (defun ensure-package-installed (&rest packages)
   "Assure every package is installed, ask for installation if it’s not.
    Return a list of installed packages or nil for every skipped package."
@@ -33,7 +35,7 @@ Extra archives where emacs can search for extensions
    (lambda (package)
      (let ((refresh nil))
        (unless (package-installed-p package)
-	 (if (refresh)
+	 (if refresh
 	     (package-install package)
 	   (progn 
 	     (package-refresh-contents)
@@ -41,10 +43,11 @@ Extra archives where emacs can search for extensions
 	     (package-install package))))))
    packages)
   )
-#+END_SRC
+   #+END_SRC
 **  Packages to install
-#+BEGIN_SRC emacs-lisp
+   #+BEGIN_SRC emacs-lisp
  (ensure-package-installed
+  'use-package
   'mic-paren
   'solarized-theme
   'org
@@ -54,179 +57,133 @@ Extra archives where emacs can search for extensions
   'evil-magit 
   'ox-reveal
  )
-#+END_SRC
-* Custom
-** Custom-set-variables
- custom-set-variables was added by Custom.
- If you edit it by hand, you could mess it up, so be careful.
- Your init file should contain only one such instance.
- If there is more than one, they won't work right.
+   #+END_SRC
 
-#+BEGIN_SRC emacs-lisp
-(custom-set-variables
- ;; custom-set-variables was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- '(custom-enabled-themes (quote (solarized-dark)))
- '(custom-safe-themes
-   (quote
-    ("2809bcb77ad21312897b541134981282dc455ccd7c14d74cc333b6e549b824f3" "713f898dd8c881c139b62cf05b7ac476d05735825d49006255c0a31f9a4f46ab" default)))
- '(inhibit-startup-screen t)
- '(initial-buffer-choice (quote remember-notes))
- '(package-selected-packages
-   (quote
-    (ox-reveal nlinum-relative org-plus-contrib org org-journal evil))))
-#+END_SRC
-** Custom-set-faces
-custom-set-faces was added by Custom.
-If you edit it by hand, you could mess it up, so be careful.
-Your init file should contain only one such instance.
-If there is more than one, they won't work right.
 
-#+BEGIN_SRC emacs-lisp
- (custom-set-faces
-  ;; custom-set-faces was added by Custom.
-  ;; If you edit it by hand, you could mess it up, so be careful.
-  ;; Your init file should contain only one such instance.
-  ;; If there is more than one, they won't work right.
-  )
-#+END_SRC
-* Plugins
-** Mic paren
-   Matches parenthesis and hilights them
-*** Enable mic paren
-#+BEGIN_SRC emacs-lisp
+* Use Package
+  #+BEGIN_SRC emacs-lisp
+(require 'use-package)
+  #+END_SRC
+
+
+* Theme
+  #+BEGIN_SRC emacs-lisp
+(load-theme 'solarized-dark t)
+  #+END_SRC
+  
+
+*  Mic Paren
+  #+BEGIN_SRC emacs-lisp
 (paren-activate)
-#+END_SRC
-*** Mic paren configurations
-#+BEGIN_SRC emacs-lisp
 (setq paren-dont-touch-blink t)
 (setq paren-highlight-offscreen t)
 (setq paren-match-face 'highlight)
 (setq paren-sexp-mode t)
-#+END_SRC
-** Ido mode
-*** Easy buffer switching
-#+BEGIN_SRC emacs-lisp
+  #+END_SRC
+
+
+* Ido mode
+  #+BEGIN_SRC emacs-lisp
 (setq indo-enable-flex-matching t)
 (setq ido-everywhere t)
 (ido-mode 1)
-#+END_SRC
-** Evil plugin
-   Evil is a plugin that mimmicks vim's glorious commands
-*** Enable evil plugin
- #+BEGIN_SRC emacs-lisp
- (require 'evil)
- #+END_SRC
-*** evil configurations
- #+BEGIN_SRC emacs-lisp
- (evil-mode 1)
- #+END_SRC
-** Evil magit
-*** Enable evil magit
- #+BEGIN_SRC emacs-lisp
- (require 'evil-magit)
- #+END_SRC
-** Evil surround
-   Allows to change the character surrounding a group of characters
-*** evil surround enabled
-  #+BEGIN_SRC emacs-lisp
-    (require 'evil-surround)
   #+END_SRC
-*** evil surroung config
-  #+BEGIN_SRC emacs-lisp
-    (global-evil-surround-mode 1)
-  #+END_SRC
-** Nlinum-relative (inactive)
-   Plugin used for relative line numbers.
 
-   Corrently using emacs default relative line number
-*** Enable nlinum relative
- #+BEGIN_SRC emacs-lisp
-  ;(require 'nlinum-relative)
- #+END_SRC
-** Reveal.js
-   Reveal is an org plugin to export into java scripts presentations
-   using reveal.js
-*** Enable reveal
- #+BEGIN_SRC emacs-lisp
-    (require 'ox-reveal)
- #+END_SRC
-*** Reveal configurations
-    Choose reveal root folder
- #+BEGIN_SRC emacs-lisp
-(setq org-reveal-root (concat "file:///" (expand-file-name "reveal.js" user-emacs-directory)))
- #+END_SRC
-** Remember
-   Remember is a plugin that allows you to take quick notes
-   and save them in a new buffer while you do your main work
-*** Enable remember
- #+BEGIN_SRC emacs-lisp
-    (require 'remember)
- #+END_SRC
+
+
+* Evil 
+  #+BEGIN_SRC emacs-lisp
+    (use-package evil
+      :init
+      (setq evil-want-integration t) ;; This is optional since it's already set to t by default.
+      (setq evil-want-keybinding nil)
+      :ensure t
+      :config
+      (evil-mode 1))
+
+    (use-package evil-collection
+      :after evil
+      :ensure t
+      :config
+      (evil-collection-init))
+
+    (use-package evil-surround
+      :ensure t
+      :config
+      (global-evil-surround-mode 1))
+
+    (use-package evil-magit
+      :ensure t)
+  #+END_SRC
+ 
+  
+* Reveal
+
+  #+BEGIN_SRC emacs-lisp
+(use-package ox-reveal
+  :ensure t
+  :config
+  (setq org-reveal-root (concat "file:///" (expand-file-name "reveal.js" user-emacs-directory))))
+  #+END_SRC
+  
+
+* Remember
+  #+BEGIN_SRC emacs-lisp
+    (use-package remember
+    :ensure t)
+  #+END_SRC
+
+
 * Display Relative Line Number
-Display line numbers in visual mode (counts collapsed lines as just one line).
-Displays the lines globally
- #+BEGIN_SRC emacs-lisp
+  Display line numbers in visual mode (counts collapsed lines as just one line).
+  Displays the lines globally
+  #+BEGIN_SRC emacs-lisp
 (setq display-line-numbers-type 'visual)
 (global-display-line-numbers-mode)
- #+END_SRC
-* Org Mode
-** Org Mode configurations
-*** Start in org mode
- #+BEGIN_SRC emacs-lisp
-  (setq initial-major-mode 'org-mode)
- #+END_SRC
-*** Hide leading starts
-    Removes extra starts on the org headers
- #+BEGIN_SRC emacs-lisp
-  (setq org-hide-leading-stars t)
- #+END_SRC
-*** Org default notes file
- #+BEGIN_SRC emacs-lisp
- (setq org-default-notes-file (concat org-directory "/notes.org"))
- #+END_SRC
-*** Todo Key words
- #+BEGIN_SRC emacs-lisp
-  (setq org-todo-keywords
-	'((sequence "TODO" "|" "DONE")
-          (sequence "DEV" "TI" "CQ" "|" "PRD")))
- #+END_SRC
-*** Keywords Faces
- #+BEGIN_SRC emacs-lisp
- (setq org-todo-keyword-faces
-	'(("TODO" . org-warning)
-	  ("DONE" . org-done)
-          ("DEV" . "green")
-	  ("TI" . "green")
-	  ("CQ" . "yellow")
-	  ("PRD" . "red")))
- #+END_SRC
-*** Pretty Entities
-    org converts latex symbols into the corresponding image symbols
- #+BEGIN_SRC emacs-lisp
-(setq org-pretty-entities t)
- #+END_SRC
+  #+END_SRC
+
+
+* Org Mode configurations
+  #+BEGIN_SRC emacs-lisp
+    (use-package org
+		 :ensure t
+		 :config
+		 (setq initial-major-mode 'org-mode)
+		 (setq org-hide-leading-stars t)
+		 (setq org-default-notes-file (concat org-directory "/notes.org"))
+		 (setq org-todo-keywords
+		       '((sequence "TODO" "|" "DONE")
+			 (sequence "DEV" "TI" "CQ" "|" "PRD")))
+		 (setq org-todo-keyword-faces
+		       '(("TODO" . org-warning)
+			 ("DONE" . org-done)
+			 ("DEV" . "green")
+			 ("TI" . "green")
+			 ("CQ" . "yellow")
+			 ("PRD" . "red")))
+		 (setq org-pretty-entities t))
+  #+END_SRC
     
-* Emacs Interfa
-** Remove menu bar
+   
+* Ibuffer
+#+BEGIN_SRC emacs-lisp
+(defalias 'list-buffers 'ibuffer)
+#+END_SRC
+
+
+* Interface Tweaks
+
  #+BEGIN_SRC emacs-lisp
+ (setq inhibit-startup-screen t)
+ (setq initial-buffer-choice 'remember-notes)
  (menu-bar-mode -1)
- #+END_SRC
-** Remove tool bar
- #+BEGIN_SRC emacs-lisp
  (tool-bar-mode -1)
- #+END_SRC
-** Remove scroll bar
- #+BEGIN_SRC emacs-lisp
  (scroll-bar-mode -1)
- #+END_SRC
-** Start maximized
- #+BEGIN_SRC emacs-lisp
  (toggle-frame-maximized)
  #+END_SRC
-* Key Mappings
+
+ 
+* Global Key Mappings
  #+BEGIN_SRC emacs-lisp
- (define-key global-map "\C-cc" 'org-capture)
+(define-key global-map "\C-cc" 'org-capture)
  #+END_SRC
