--- a/.emacs.org
+++ b/.emacs.org
@@ -21,7 +21,7 @@
 (add-to-list 'package-archives '("org" . "https://orgmode.org/elpa/") t)
   #+END_SRC
 
-
+  
 * Automatic Installation of Packages
 ** Check if packages are installed
    If packages aren't installed:
@@ -56,10 +56,18 @@
   'magit
   'evil-magit 
   'ox-reveal
+  'lsp-mode
+  'lsp-java
+  'projectile
+  'yasnippet
+  'company-lsp
+  'treemacs
+  'flycheck
+  'treemacs-evil
  )
    #+END_SRC
 
-
+   
 * Use Package
   #+BEGIN_SRC emacs-lisp
 (require 'use-package)
@@ -71,6 +79,15 @@
 (load-theme 'solarized-dark t)
   #+END_SRC
   
+  
+*  Pcre2el
+
+  #+BEGIN_SRC emacs-lisp
+(use-package pcre2el
+:ensure t
+:config (pcre-mode))
+  #+END_SRC
+
 
 *  Mic Paren
   #+BEGIN_SRC emacs-lisp
@@ -114,6 +131,7 @@
 
     (use-package evil-magit
       :ensure t)
+
   #+END_SRC
  
   
@@ -187,3 +205,122 @@
  #+BEGIN_SRC emacs-lisp
 (define-key global-map "\C-cc" 'org-capture)
  #+END_SRC
+ 
+
+* Lsp mode
+  #+BEGIN_SRC emacs-lisp
+(require 'cc-mode)
+(setq lsp-prefer-flymake nil)
+
+(use-package projectile :ensure t)
+(use-package yasnippet :ensure t
+:config (yas-global-mode 1))
+
+(use-package lsp-mode :ensure t)
+(use-package hydra :ensure t)
+(use-package company-lsp :ensure t
+  :config (push 'company-lsp company-backends)
+  (setq company-lsp-enable-snippet t)
+  (setq company-lsp-enable-recompletio t))
+(use-package lsp-ui :ensure t
+  :hook lsp-mode)
+(use-package lsp-java :ensure t :after lsp
+  :hook java-mode)
+
+(use-package dap-mode
+  :ensure t :after lsp-mode
+  :config
+  (dap-mode t)
+  (dap-ui-mode t))
+
+(use-package dap-java :after (lsp-java))
+
+(add-hook 'java-mode-hook 'flycheck-mode)
+#+END_SRC
+
+
+* Treemacs
+
+  #+BEGIN_SRC emacs-lisp
+(use-package treemacs
+  :ensure t
+  :defer t
+  :init
+  (with-eval-after-load 'winum
+    (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
+  :config
+  (progn
+    (setq treemacs-collapse-dirs                 (if treemacs-python-executable 3 0)
+          treemacs-deferred-git-apply-delay      0.5
+          treemacs-display-in-side-window        t
+          treemacs-eldoc-display                 t
+          treemacs-file-event-delay              5000
+          treemacs-file-extension-regex          treemacs-last-period-regex-value
+          treemacs-file-follow-delay             0.2
+          treemacs-follow-after-init             t
+          treemacs-git-command-pipe              ""
+          treemacs-goto-tag-strategy             'refetch-index
+          treemacs-indentation                   2
+          treemacs-indentation-string            " "
+          treemacs-is-never-other-window         nil
+          treemacs-max-git-entries               5000
+          treemacs-missing-project-action        'ask
+          treemacs-no-png-images                 nil
+          treemacs-no-delete-other-windows       t
+          treemacs-project-follow-cleanup        nil
+          treemacs-persist-file                  (expand-file-name ".cache/treemacs-persist" user-emacs-directory)
+          treemacs-position                      'left
+          treemacs-recenter-distance             0.1
+          treemacs-recenter-after-file-follow    nil
+          treemacs-recenter-after-tag-follow     nil
+          treemacs-recenter-after-project-jump   'always
+          treemacs-recenter-after-project-expand 'on-distance
+          treemacs-show-cursor                   nil
+          treemacs-show-hidden-files             t
+          treemacs-silent-filewatch              nil
+          treemacs-silent-refresh                nil
+          treemacs-sorting                       'alphabetic-asc
+          treemacs-space-between-root-nodes      t
+          treemacs-tag-follow-cleanup            t
+          treemacs-tag-follow-delay              1.5
+          treemacs-width                         35)
+
+    ;; The default width and height of the icons is 22 pixels. If you are
+    ;; using a Hi-DPI display, uncomment this to double the icon size.
+    ;;(treemacs-resize-icons 44)
+
+    (treemacs-follow-mode t)
+    (treemacs-filewatch-mode t)
+    (treemacs-fringe-indicator-mode t)
+    (pcase (cons (not (null (executable-find "git")))
+                 (not (null treemacs-python-executable)))
+      (`(t . t)
+       (treemacs-git-mode 'deferred))
+      (`(t . _)
+       (treemacs-git-mode 'simple))))
+  :bind
+  (:map global-map
+        ("M-0"       . treemacs-select-window)
+        ("C-x t 1"   . treemacs-delete-other-windows)
+        ("C-x t t"   . treemacs)
+        ("C-x t B"   . treemacs-bookmark)
+        ("C-x t C-t" . treemacs-find-file)
+        ("C-x t M-t" . treemacs-find-tag)))
+
+(use-package treemacs-evil
+  :after treemacs evil
+  :ensure t)
+
+(use-package treemacs-projectile
+  :after treemacs projectile
+  :ensure t)
+
+(use-package treemacs-icons-dired
+  :after treemacs dired
+  :ensure t
+  :config (treemacs-icons-dired-mode))
+
+(use-package treemacs-magit
+  :after treemacs magit
+  :ensure t)
+#+END_SRC
